--- a/common_buttonChkbox.css
+++ b/common_buttonChkbox.css
@@ -3,11 +3,11 @@ button{
     background: #3B3838;
     color:white;
     font-size: 14px;
-    width:100px;
-    border: 2px #3B3838 solid;
+    width:95px;
+    border: 1px #3B3838 solid;
     height: 25px;
 }
-input[type="text" i], input[type="date" i]{
+input[type="text" i]{
     font-family: 'KoPubDotum';
     width:300px;
     font-size: 14px;
@@ -15,13 +15,21 @@ input[type="text" i], input[type="date" i]{
     border:1.5px rgb(178, 178, 178) solid;
     height: 20px;
 }
-input[type="submit" i]{
-    width:100px;
+input[type="date" i]{
+    font-family: 'KoPubDotum';
+    width:130px;
+    font-size: 14px;
+    padding-left:5px;
+    border:1.5px rgb(178, 178, 178) solid;
+    height: 20px;
+}
+input[type="submit" i], input[type="reset" i]{
+    width:95px;
     font-family: 'KoPubDotum';
     font-size: 14px;
     background: #3B3838;
     color:white;
-    border: 2px #3B3838 solid;
+    border: 1px #3B3838 solid;
     height: 25px;
 }
 
