--- a/common_filter.css
+++ b/common_filter.css
@@ -12,7 +12,7 @@
     width:90%;
     /* box-sizing: border-box; */
     display: block;
-    height:700px;
+    height:460px;
     /* top:170px; */
 }
 .filterWrap{
@@ -21,7 +21,7 @@
     width:90%;
     margin:auto;
     padding: 25px;
-    height: 500px;
+    height: 330px;
     background: white;
     border-radius:15px;
 }
@@ -33,11 +33,14 @@
     border-bottom: 1px solid #3B3838;
     margin-bottom: 25px;
 }
-ul{ padding: 0; width:90%}
+ul{ padding: 0; width:98%}
 .filterWrap li {
     list-style: none;
-    /* border: #3B3838 1px solid; */
-    padding-bottom: 50px;
+    padding-bottom: 35px;
+}
+.filterWrap .line2{
+    list-style: none;
+    padding-bottom: 62px;
 }
 .title{
     font-family:'KoPubDotum';
@@ -46,22 +49,41 @@ ul{ padding: 0; width:90%}
     width:20%;
     float: left;
 }
-.tripSite, .tripDays, .tripWith, .tripAccess{
+.tripSite, .tripWith, .tripAccess{
     float:right;
     width: 80%
     /* float: right; */
+}
+.tripDays{
+    float:right;
+    width:80%;
 }
 .set{
     font-size: 14px;
     width:20%;
     display: inline-block;
+    padding-bottom: 10px;
 }
+.setDate{
+    font-size: 14px;
+    width: 36%;
+    display: inline-block;
+    padding-bottom: 10px;
+}
+#set1stDate{
+    padding-right:26px;
+
+}
+
 .date{
+    width:200px;
     font-size: 14px;
 }
 .title label{ vertical-align: -3px;}
 .tripStyle label{ vertical-align: 2px;}
 .tripDays label{ vertical-align: 2px;}
+.tripWith label{ vertical-align: 2px;}
+.tripAccess label{ vertical-align: 2px;}
 
 .tripStyle{
     float: right;
