--- a/common_header.css
+++ b/common_header.css
@@ -12,7 +12,7 @@ body{
 }
 main{
     padding-top:120px;
-    border: darkblue 1px solid;
+    border:  #3B3838 1px solid;
     /* background-color: rgb(255, 241, 241); */
     margin:auto;
     width:70%;
