메인페이지 수정(대략적인 게시글 추가, footer공간 추가에 따른 전체적인 수정)

--- a/common_filter.css
+++ b/common_filter.css
@@ -9,7 +9,7 @@
     margin-top: 5%;
     background-color: rgb(255,248,243);
     border-radius:15px;
-    width:90%;
+    width: 86%;
     /* box-sizing: border-box; */
     display: block;
     height:460px;
@@ -20,10 +20,11 @@
     box-sizing: border-box;
     width:90%;
     margin:auto;
-    padding: 25px;
+    padding: 15px;
     height: 330px;
     background: white;
     border-radius:15px;
+    box-shadow: 2px 2px 2.88px 0.12px rgba(0, 0, 0, 0.15);
 }
 .tit_sch{
     position: relative;
@@ -46,17 +47,17 @@ ul{ padding: 0; width:98%}
     font-family:'KoPubDotum';
     font-weight: bold;
     font-size: 14px;
-    width:20%;
+    width:17%;
     float: left;
 }
 .tripSite, .tripWith, .tripAccess{
     float:right;
-    width: 80%
+    width: 83%
     /* float: right; */
 }
 .tripDays{
     float:right;
-    width:80%;
+    width:83%;
 }
 .set{
     font-size: 14px;
@@ -87,7 +88,7 @@ ul{ padding: 0; width:98%}
 
 .tripStyle{
     float: right;
-    width: 80%
+    width: 83%
 }
 form #schInfo{ 
     font-family: 'KoPubDotum';
