--- a/common_filter.css
+++ b/common_filter.css
@@ -34,7 +34,7 @@
     border-bottom: 1px solid #3B3838;
     margin-bottom: 25px;
 }
-ul{ padding: 0; width:98%}
+.filter_ul{ padding: 0; width:98%}
 .filterWrap li {
     list-style: none;
     padding-bottom: 35px;
