--- a/common_header.css
+++ b/common_header.css
@@ -1,9 +1,3 @@
-/* @font-face{
-    font-family: 'KoPubBatangMedium';
-    src: local('KoPubBatangMedium'),
-    url('KoPubBatangMedium.eot') format('eot'),
-    url('KoPubBatangMedium.woff') format('woff');
-} */
 @import url(http://fonts.googleapis.com/earlyaccess/kopubbatang.css);
 @import url(http://cdn.jsdelivr.net/npm/font-kopub@1.0/kopubdotum.min.css);
 
@@ -19,13 +13,14 @@ main{
     border: #3B3838 1px solid;
     /* background-color: rgb(255, 241, 241); */
     margin:auto;
-    width:70%;
+    width:884px;
     position: relative;
     height:auto;
 }
 h1,h2,h3,h4,body{
     font-family: 'KoPubDotum';
 }
+
 a:-webkit-any-link { /*링크 밑줄 삭제*/
     color: black ;
     cursor: pointer;
@@ -40,32 +35,33 @@ a:-webkit-any-link { /*링크 밑줄 삭제*/
     box-shadow: 0px 4px 3px  rgb(178, 178, 178); /*그림자*/
     z-index: 10;
 }
-.home #join, #login{
+.top_button{
+    width:100px;
+    height:15px;
+    display: inline-block;
+    position: fixed;
+    right:100px;
+    top:22px;
+    z-index:15;
+}
+.top_button #join, #login{
     font-family: 'KoPubBatang';
     font-size: 12px;
     font-weight: 300;
+    display: inline-block;
+    cursor:pointer;
+    width:45px;
     -webkit-text-stroke: 0.5px rgba(0, 0, 0, 0.3);
     /* text-shadow: 0 0 rgba(0,0,0,100) ; */
-    /* display: inline-block; */
 }
-.home #join{
-    top:25px;
-    position: fixed;
-    right:13.5%;
-    float: right;
-}
-.home #login{
-    top:25px;
-    position: fixed;
-    right:10%;
-    float: right;
-}
-.home #seoulMate{
+
+.home .seoulMate{
     position: fixed;
     top:20px;
     left:15%;
-    width: 300px;   
-    float: left;
+    width: 300px;
+    height:24.65px;
+    display: inline-block; 
 }
 
 #menu li {
@@ -75,7 +71,11 @@ a:-webkit-any-link { /*링크 밑줄 삭제*/
     display: inline-block;
 }
 #menu ul{
-    margin:10px;
+    text-align: center;
+    position: relative;
+    width:600px;
+    margin: 10px auto 10px auto;
+    padding:0;
 }
 #menu {
     z-index: 1;
@@ -116,5 +116,23 @@ footer p{
     background-color:ivory;
     margin: 30px;
     vertical-align: middle;
-    
+}
+.main_title{
+    position: relative;
+    left:50px;
+    padding:0;
+}
+
+@media screen and (max-width: 1150px) {
+    .top_button, #join, #login { display: none; }}
+
+@media screen and (max-width: 700px) {
+    .top_button, #join, #login { display: none; }
+}
+
+.hr_divider{
+    width: 790px;  background-color:#3B3838; margin:auto; margin-top: 90px; 
+}
+.hr_title{
+    width:830px; background-color: #3B3838; margin:auto;
 }
