--- a/common_buttonChkbox.css
+++ b/common_buttonChkbox.css
@@ -37,3 +37,49 @@ input[type="checkbox" i]{
     border:1.5px rgb(178, 178, 178) solid;
     
 }
+
+.hiddenBtn{
+    display:none;
+}
+
+.btn{
+    transform: rotate(-0.03deg);
+    font-size: 12px;
+}
+.submitBtn{
+    background: #3B3838;
+    color: white;
+}
+.write .submitBtn{
+    cursor: pointer;
+    display: block;
+    margin: auto;
+    margin-top: 20px;
+    width: 100px;
+}
+.fileBtn, .addSchBtn, .resetBtn{
+    color: black;
+    padding-top: 2px;
+    font-size: 12px;
+    height:15px;
+    width:80px;
+    text-align: center;
+    display: inline-block;
+    background-color:  rgb(255,248,243);
+    border: 2px solid rgb(255,248,243);
+    box-shadow: 1px 1px 0px 0.5px rgba(0, 0, 0, 0.25);
+    transform: rotate(-0.03deg);
+    cursor: pointer;
+}
+.addSchBtn, .resetBtn{
+    text-align: center;
+    margin-top: 5px;
+    width:80px;
+    height:21px;
+    box-sizing: border-box;
+    align-items: flex-end;
+    font-size: 12px;
+    position: relative;
+    right: -218px;
+}
+
