--- a/css/common/popup_site.css
+++ b/css/common/popup_site.css
@@ -1,5 +1,5 @@
 @import url(http://cdn.jsdelivr.net/npm/font-kopub@1.0/kopubdotum.min.css);
-body{width:1280px; height:1000px; position: absolute;}
+body{width:1280px; height:500px; position: absolute;}
 .wrap_pop{width:100%; height:100%; z-index:110; position:absolute; top:0; left:0;}
 .pop{position: absolute; z-index: 110; background: #fff; color: #3B3838;}
 #districtPop{ margin-left: -440px !important; padding: 25px 30px;  width: 880px; height: 300px; border-radius: 20px; position: relative;}
@@ -8,9 +8,11 @@ body{width:1280px; height:1000px; position: absolute;}
 .pop .tit h2 b{font-weight: 700;}
 .tit .btn_close1{ overflow:hidden; text-indent:-9999px;
     position:absolute; top:0; right:40px; border:0 none; cursor: pointer; }
-.btn_close1{padding: 26px 30px; background: url('image/cancel.png') center no-repeat; background-size: 12px; float: right;}
+.btn_close1{padding: 26px 30px; background: url('../../image/cancel.png') center no-repeat; background-size: 10px; float: right; box-shadow: none;}
 .choice ul li button{ 
-    font-size:12px; color:#666; transform: rotate(-0.03deg);
+    background-color:white; color: #3B3838; font-weight: normal;
+    -webkit-text-stroke: 0.3px rgba(0, 0, 0, 0.3);
+    font-size:12px; transform: rotate(-0.03deg);
     border:none;  text-rendering:auto; display:inline-block; align-items:flex-start; box-sizing:border-box;}
 #districtBox{width:820px; display: block;}
 #districtBox:after{display: block; content:''; clear:both;}
